# ggml-hexagon

./: AUTHORS  CMakeLists.txt  README.md  build-xcframework.sh  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py
.github/workflows/: build-linux-cross.yml  build.yml
ci/: README.md  run.sh
cmake/: aarch64-w64-mingw32.cmake  arm64-windows-cygwin.cmake  arm64-windows-llvm.cmake
common/: CMakeLists.txt  arg.cpp  chat.cpp  common.cpp  common.h  console.cpp  sampling.cpp
common/minja/: minja.hpp
docs/: build.md
docs/backend/: SYCL.md
examples/cvector-generator/: cvector-generator.cpp
examples/export-lora/: export-lora.cpp
examples/imatrix/: imatrix.cpp
examples/llava/: clip.cpp  gemma3-cli.cpp  llava-cli.cpp  minicpmv-cli.cpp  qwen2vl-cli.cpp
examples/main/: main.cpp
examples/parallel/: parallel.cpp
examples/rpc/: rpc-server.cpp
examples/run/: run.cpp
examples/server/: server.cpp  utils.hpp
examples/server/tests/: utils.py
examples/tts/: tts.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-hexagon.h  ggml-qnn.h
ggml/src/: CMakeLists.txt  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.cpp
ggml/src/ggml-blas/: ggml-blas.cpp
ggml/src/ggml-cann/: ggml-cann.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cuda/: ggml-cuda.cu
ggml/src/ggml-hexagon/: CMakeLists.txt  ggml-hexagon.cpp
ggml/src/ggml-hexagon/kernels/: Makefile  ggml-dsp.c  ggml-dsp.h  ggmlop_ap_skel.c  ggmlop_ap_skel.h  ggmlop_cdsp.c  ggmlop_cdsp_skel.c
ggml/src/ggml-kompute/: ggml-kompute.cpp
ggml/src/ggml-metal/: ggml-metal.m
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-qnn/: CMakeLists.txt  ggml-qnn-impl.h  ggml-qnn-ops.cpp  ggml-qnn-ops.h  ggml-qnn.cpp
ggml/src/ggml-qnn/kernels/: Makefile  ggmlop.h  ggmlop_ap_skel.c  ggmlop_ap_skel.h  ggmlop_cdsp.c  ggmlop_cdsp_skel.c  ggmlop_stub.c
ggml/src/ggml-rpc/: ggml-rpc.cpp
ggml/src/ggml-sycl/: ggml-sycl.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
gguf-py/gguf/: constants.py  tensor_mapping.py
include/: llama.h
models/templates/: README.md
scripts/: build-run-android-minimal.sh  build-run-android.sh  build-run-windows.sh  build-woa-windows.bat  build-x86-windows.bat  ggml-hexagon.cfg  ggml-qnn.cfg  sync-ggml-am.sh  sync-ggml.last
src/: llama-arch.cpp  llama-arch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-graph.cpp  llama-kv-cache.cpp  llama-kv-cache.h  llama-mmap.cpp  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-vocab.cpp  llama.cpp
tests/: CMakeLists.txt  ggml-qnn-ut-4d.cpp  ggml-qnn-ut.cpp  simple-backend-ut.cpp  test-backend-ops.cpp  test-chat-template.cpp  test-chat.cpp
